--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>kpi lab1</title>
   <link rel="stylesheet" href="files/css/style.css">
+  <meta charset="utf-8">
 </head>
 
 <body style="background-image: url(Repeating-Triangles.svg)">
