--- a/student_info.html
+++ b/student_info.html
@@ -4,6 +4,7 @@
 <head>
   <link rel="stylesheet" href="files/css/style.css">
   <title>kpi lab1</title>
+  <meta charset="utf-8">
 </head>
 
 <body style="background-image: url(Repeating-Triangles.svg)">
