added js function

--- a/func.html
+++ b/func.html
@@ -1,13 +1,13 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <title>kpi lab1</title>
-  <link rel="stylesheet" href="files/css/style.css">
   <meta charset="utf-8">
+  <script src="files/js/func.js"></script>
+  <link rel="stylesheet" href="files/css/style.css">
 </head>
 
-<body style="background-image: url(Repeating-Triangles.svg)">
+<body>
   <header>
     <div style="background-color: #333;border:2px solid black">
       <div class=header_div>
@@ -30,11 +30,8 @@
   </nav>
   <section>
     <div style="border:2px solid black">
-      <div align=center class=section_div>
-        <iframe width="1080" height="600" src="https://www.youtube.com/embed/0t7y7mJvJvM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <div>
-          <p align=center>Hello, please login. <a href="login2.html">Click</a></p>
-        </div>
+      <div class=section_div>
+        <p>Execute function : <button id=func onclick="func_v7()">Execute</button></p>
       </div>
     </div>
   </section>
