--- a/login3.html
+++ b/login3.html
@@ -85,6 +85,8 @@
         <a class=p_hidden href="student_info.html">Student Info</a>
         <a class=p_hidden href="login2.html">Login2</a>
         <a class=p_hidden href="login3.html">Login3</a>
+        <a class=p_hidden href="student.html">Student.js</a>
+        <a class=p_hidden href="func.html">func.js</a>
       </div>
     </div>
   </nav>
