--- a/student.html
+++ b/student.html
@@ -1,13 +1,13 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <title>kpi lab1</title>
-  <link rel="stylesheet" href="files/css/style.css">
   <meta charset="utf-8">
+  <script src="files/js/Student.js"></script>
+  <link rel="stylesheet" href="files/css/style.css">
 </head>
 
-<body style="background-image: url(Repeating-Triangles.svg)">
+<body>
   <header>
     <div style="background-color: #333;border:2px solid black">
       <div class=header_div>
@@ -30,11 +30,11 @@
   </nav>
   <section>
     <div style="border:2px solid black">
-      <div align=center class=section_div>
-        <iframe width="1080" height="600" src="https://www.youtube.com/embed/0t7y7mJvJvM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <div>
-          <p align=center>Hello, please login. <a href="login2.html">Click</a></p>
-        </div>
+      <div class=section_div>
+        <p>Enter Surname<button id=surname onclick="surname()">surname</button></p>
+        <p>Enter Age<button id=age onclick="age()">age</button></p>
+        <p>Course++<button id=course onclick="course()" >rank up</button></p>
+        <p>Print data <button id=print onclick="print()">Print</button></p>
       </div>
     </div>
   </section>
