--- a/lab4/login_js.html
+++ b/lab4/login_js.html
@@ -68,7 +68,7 @@
                   <input type="checkbox" class="checkbox" id="agree" name="agree">
                 </p>
                 <p>
-                  <input class="submit" type="submit" onclick="ajax_post();" value="Submit" >
+                  <input class="submit" type="button" onclick="ajax_post();" value="Submit" >
                 </p>
               </form>
             </fieldset>
